# ML_from_scratch

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirement.txt
comaprision/: linear.ipynb  logistic_vs_scikit.ipynb
examples/: logistic_demo.py
src/mlf/: base.py
src/mlf/linear_model/: linear_regression.py  logistic_regression.py
src/mlf/neighbors/: knn.py
src/mlf/tree/: decision_tree.py
tests/: test_decision_tree_vs_sklearn.py  test_knn_vs_sklearn.py  test_linear_vs_sklearn.py  test_logistic.py  test_logistic_against_sklearn.py
