[project]
name = "ml-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib==3.10.8",
    "numpy==2.4.2",
    "pandas>=3.0.0",
    "pytest==9.0.2",
    "scikit-learn==1.8.0",
    "tqdm>=4.67.3",
]
